--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -11,7 +11,7 @@ name: OpenWrt-CI
 
 on:
   schedule:
-    - cron: 35 10 * * *
+    - cron: 0 20 * * *
 
 
 jobs:
@@ -55,11 +55,11 @@ jobs:
         ./scripts/feeds install -a
 
     - name: 生成配置文件
-      env:
-        CONFIG_FILE: '.config'
+#      env:
+#        CONFIG_FILE: '.config'
       run: |
-        [ -e files ] && mv files lede/files
-        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE lede/.config
+#        [ -e files ] && mv files lede/files
+#        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE lede/.config
         make defconfig
 
     - name: 下载dl软件
@@ -68,10 +68,17 @@ jobs:
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
-    - name: 编译固件
+    - name: 固件编译
       run: |
+        cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc)
+        
+    - name: 固件校验
+      if: failure()
+      run: |
+        cd openwrt
+        make -j1 V=s 
 
     - name: 上传固件及软件包
       uses: actions/upload-artifact@master
