--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -11,7 +11,7 @@ name: OpenWrt-CI
 
 on:
   schedule:
-    - cron: 24 13 * * *
+    - cron: 42 13 * * *
 
 
 jobs:
@@ -55,9 +55,9 @@ jobs:
         ./scripts/feeds install -a
 
     - name: 生成配置文件
-      env:
-        # CONFIG_FILE: '.config'
-        # DIY_SH: 'diy.sh'
+      # env:
+      #   # CONFIG_FILE: '.config'
+      #   # DIY_SH: 'diy.sh'
       run: |
         # [ -e files ] && mv files openwrt/files
         # [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
