--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -7,7 +7,7 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 # 
 
-name: OpenWrt-CI
+name: OpenWrt-编译
 
 on:
   schedule:
@@ -21,12 +21,12 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-    - name: Checkout
+    - name: 系统部署
       uses: actions/checkout@master
       with:
         ref: master
 
-    - name: 系统部署
+    - name: 安装依赖
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
@@ -54,7 +54,7 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
-    - name: 生成配置文件
+    - name: 生成配置
       # env:
       #   # CONFIG_FILE: '.config'
       #   # DIY_SH: 'diy.sh'
@@ -81,14 +81,14 @@ jobs:
       run: |
         make -j1 V=s 
 
-    - name: 上传固件及软件包
+    - name: 固件打包
       uses: actions/upload-artifact@master
       if: always()
       with:
         name: OpenWrt_bin
         path: lede/bin
 
-    - name: 固件打包
+    - name: 上传固件及ipk
       if: always()
       run: |
         cd bin/targets/*/*
