--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -11,7 +11,7 @@ name: OpenWrt-编译
 
 on:
   schedule:
-    - cron: 32 14 * * *
+    - cron: 0 20 * * *
 
 
 jobs:
@@ -26,7 +26,7 @@ jobs:
       with:
         ref: master
 
-    - name: 安装依赖
+    - name: 安装环境
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
