--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -17,10 +17,10 @@ on:
 #      - master
 #    paths:
 #      - '.config'
-#  schedule:
-#    - cron: 0 20 * * *
-  watch:
-    types: [started]
+  schedule:
+    - cron: 0 20 * * *
+#  watch:
+#    types: [started]
 
 
 jobs:
