--- a/package/hong/oaf/Makefile
+++ b/package/hong/oaf/Makefile
@@ -3,16 +3,17 @@ include $(TOPDIR)/rules.mk
 include $(INCLUDE_DIR)/kernel.mk
 
 PKG_NAME:=oaf
-PKG_RELEASE:=3
+PKG_VERSION:=3.0
+PKG_RELEASE:=1
 
 include $(INCLUDE_DIR)/package.mk
 
 PKG_AUTOLOAD:=oaf
+RSTRIP:=:
 
 define KernelPackage/oaf
-  SECTION:=Kernel
-  CATEGORY:=Kernel modules
-  SUBMENU:=Netfilter Extensions
+  SECTION:=Derry Apps
+  CATEGORY:=Derry Apps
   TITLE:=open app filter kernel module
   FILES:=$(PKG_BUILD_DIR)/oaf.ko 
   KCONFIG:=
