--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -19,8 +19,8 @@ on:
 #      - '.config'
 #  schedule:
 #    - cron: 0 20 * * *
-#  watch:
-#    types: [started]
+  watch:
+    types: [started]
 
 
 jobs:
