--- a/config/Config-images.in
+++ b/config/Config-images.in
@@ -287,7 +287,7 @@ menu "Target Images"
 	config TARGET_IMAGES_GZIP
 		bool "GZip images"
 		depends on TARGET_IMAGES_PAD || TARGET_ROOTFS_EXT4FS || TARGET_x86
-		default n
+		default y
 
 	comment "Image Options"
 
@@ -303,7 +303,7 @@ menu "Target Images"
 	config TARGET_ROOTFS_PARTSIZE
 		int "Root filesystem partition size (in MB)"
 		depends on GRUB_IMAGES || EFI_IMAGES || USES_ROOTFS_PART || TARGET_ROOTFS_EXT4FS || TARGET_mvebu || TARGET_rb532 || TARGET_sunxi || TARGET_uml
-		default 200
+		default 500
 		help
 		  Select the root filesystem partition size.
 
