--- a/package/hong/luci-app-PwdHackDeny/Makefile
+++ b/package/hong/luci-app-PwdHackDeny/Makefile
@@ -6,7 +6,7 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI support for password hack deny by wulishui
-LUCI_DEPENDS:=
+LUCI_DEPENDS:=+libc +gawk +ipset
 LUCI_PKGARCH:=all
 PKG_VERSION:=1.0
 PKG_RELEASE:=20200120
