--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -63,9 +63,9 @@ jobs:
         ./scripts/feeds install -a
 
     - name: 生成配置
-       env:
-        #  CONFIG_FILE: '.config'
-        #  DIY_SH: 'diy.sh'
+      # env:
+      #  CONFIG_FILE: '.config'
+      #  DIY_SH: 'diy.sh'
       run: |
         [ -e files ] && mv files lede/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE lede/.config
