--- a/.config
+++ b/.config
@@ -38,4 +38,4 @@ CONFIG_PACKAGE_python3-base=y
 CONFIG_PACKAGE_python3-light=y
 CONFIG_PACKAGE_python3-maxminddb=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
-CONFIG_PACKAGE_wpad=m
+CONFIG_PACKAGE_wpad=y
